[gd_scene load_steps=2 format=3 uid="uid://bbfljnpka32fw"]

[ext_resource type="Script" uid="uid://d0om4a3ll4teb" path="res://scripts/ui/menus/game_mode_selection.gd" id="1_aji3l"]

[node name="GameModeSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aji3l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3647059, 0.5921569, 0.5176471, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Gamemode"

[node name="ButtonContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SingleplayerButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Back"

[node name="MultiplayerPanel" type="Panel" parent="."]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerPanel"]
layout_mode = 0
offset_left = 482.0
offset_top = 158.0
offset_right = 810.0
offset_bottom = 255.0

[node name="Label" type="Label" parent="MultiplayerPanel/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Lobby"

[node name="LobbyList" type="ItemList" parent="MultiplayerPanel/VBoxContainer"]
layout_mode = 2
max_text_lines = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HostButton" type="Button" parent="MultiplayerPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create Lobby"

[node name="JoinButton" type="Button" parent="MultiplayerPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join Lobby"

[node name="RefreshButton" type="Button" parent="MultiplayerPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="CloseButton" type="Button" parent="MultiplayerPanel/VBoxContainer"]
layout_mode = 2
text = "Close"
